Upgrade Java to version 21 and update code to use Java 21 APIs